Fix icon hover visibility on small screens

--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -100,6 +100,7 @@ figure.show { display: block; }
             'GRAD' -25,
             'opsz' 48;
         position: absolute;
+        visibility: visible;
         direction: rtl !important;
         top: 10px;
         right: 10px;
@@ -243,7 +244,7 @@ button.close {
         color: $inverse-color;
     }
 
-    .material-symbols-outlined {
+    .iconCntr .material-symbols-outlined {
         visibility: hidden;
     }
     .modalImg {
